# test

./: .gitignore  README.md  chromadb.txt  download_model.py  file_db.py  pyproject.toml  run_deploy_qwen38b.py  tag_ask.py  tag_ask_local_qwen38b.py
