[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "modelscope>=1.26.0",
    "openai>=1.82.1",
    "pypdf>=5.6.0",
    "sentence-transformers>=4.1.0",
]
